--- a/pad.css
+++ b/pad.css
@@ -1,5 +1,5 @@
 #gamepad-0 {
-  background-image: url("https://svgur.com/i/v8K.svg");
+  background-image: url("https://botbrad.github.io/input-display/body.svg");
 }
 
 .quadrant {
